# redteamv9-adk

./: .env.example  .gitignore  README.md  demo_start_adk.ps1  mcp_test.py  pyproject.toml  start_engagement.py  suppress_warnings.py
agent_prompts/: README.md  executor_system_prompt.md  orchestrator_system_prompt.md  planner_system_prompt.md  reflector_system_prompt.md  skill_files_required.md  starter_prompt.md  tool_mapping.md  webapp_pt_skill.md
orchestrator_agent/: agent.py  env.py
orchestrator_agent/executor_agent/: agent.py
orchestrator_agent/planner_agent/: agent.py
orchestrator_agent/reflector_agent/: agent.py
orchestrator_agent/skills/cowork-orchestrator-skill/: SKILL.md
orchestrator_agent/skills/report-interpretation-skill/: SKILL.md
orchestrator_agent/skills/thinking-pattern-skill/: SKILL.md
orchestrator_agent/skills/webapp-pt-skill/: SKILL.md
