[project]
name = "multi-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.26",
    "google-adk[a2a]>=2.1.0",
    "google-generativeai>=0.8.6",
    "litellm>=1.86.1",
    "beautifulsoup4>=4.14.3",
    "deepagents>=0.3.9",
    "fastapi>=0.127.0",
    "fastembed>=0.7.4",
    "fastmcp>=2.14.1",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "ipwhois==1.2.0",
    "jupyterlab>=4.2.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas==2.3.3",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "pypdf>=6.5.0",
    "python-socketio>=5.16.0",
    "qdrant-client>=1.16.2",
    "botocore>=1.43.18",
    "genson>=1.3.0",
    "aiosqlite>=0.22.1",
    "sqlalchemy>=2.0.50",
    "greenlet>=3.5.1",
]
